DGS-5851 Add header support to console producer/consumer